# speak-sql

./: README.md  graph.py  main.py  pyproject.toml  state.py
config/: config.py
helpers/: book_ticket.py  detect_intent.py  end_message.py  get_db.py  get_museum_details.py  query_checker.py  route_query.py  user_details.py
tools/: read_db.py  write_db.py
