[project]
name = "speak-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "psycopg2>=2.9.11",
]
